// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Native <Box /> as prop when br box created match snapshot 1`] = `
<Text
  style={
    Object {
      "alignContent": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexShrink": 0,
    }
  }
>
  

</Text>
`;

exports[`Native <Box /> as prop when empty box created match snapshot 1`] = `
<View
  style={
    Object {
      "alignContent": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexShrink": 0,
    }
  }
/>
`;

exports[`Native <Box /> as prop when span box created match snapshot 1`] = `
<Text
  lineBreakMode="tail"
  style={
    Object {
      "alignContent": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexShrink": 0,
    }
  }
/>
`;

exports[`Native <Box /> base prop when Pressable box created match snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  id="component"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignContent": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexShrink": 0,
    }
  }
/>
`;

exports[`Native <Box /> default style when styled box created match snapshot 1`] = `
<View
  style={
    Object {
      "alignContent": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexShrink": 0,
      "height": 300,
      "width": 300,
    }
  }
/>
`;
